--- a/Application/Home/View/Fangyuan/esfy.html
+++ b/Application/Home/View/Fangyuan/esfy.html
@@ -88,7 +88,7 @@
       </select>
     </div>
       <div class="layui-input-inline" style="width:400px;">
-        <input type="text" name="sousuo" list="greetings"  autocomplete="off" placeholder="请输入房源编号、小区、业主姓名、电话、经纪人..." class="layui-input" id="sousuo" >
+        <input type="text" name="sousuo" list="greetings"  autocomplete="off" placeholder="请输入房源编号、小区、业主姓名、电话" class="layui-input" id="sousuo" >
         <div id="greetings" >
            <ul id="tcontent">
               
@@ -104,7 +104,6 @@
     </div>
 
     <div class="layui-inline">
-
       <div class="layui-input-inline" style="width:80px;margin-left:20px;">
         <select name="zhuangxiu" >
         <option value="">装修</option>
@@ -131,7 +130,7 @@
       </div>
     </div>
 
-    <div class="layui-inline" style="float:right;" id="tianjiafy3">
+    <div class="layui-inline" style="float:right;margin-bottom: 10px;" id="tianjiafy3">
        <a class="layui-btn  layui-btn-danger"  id="tianjiafy">
            添加房源
         </a>
@@ -149,15 +148,15 @@
   </div>
 
   <div class="layui-form-item" >
-    <div class="layui-input-inline" style="width:100px;margin-left:20px;">
-        <select name="zhuangtai" >
-        <option value="0">全部</option>
-          <foreach name="zhuangtai" item="pz">
-              <option value="{$pz.lxid}" <if condition="$pz['lxid'] eq 1">selected=""</if>>{$pz.lxming}</option>
-          </foreach>
-        </select>
-      </div>
-    <div class="layui-input-block">
+      <!--<div class="layui-input-inline" style="width:100px;margin-left:20px;">
+          <select name="zhuangtai" >
+          <option value="0">全部</option>
+            <foreach name="zhuangtai" item="pz">
+                <option value="{$pz.lxid}" <if condition="$pz['lxid'] eq 1">selected=""</if>>{$pz.lxming}</option>
+            </foreach>
+          </select>
+        </div>-->
+    <!--<div class="layui-input-block">
       <input type="checkbox" lay-filter="checkbox" lay-skin="primary" title="我的房源" name="myfy" value="1"  /> 
       <input type="checkbox" lay-filter="checkbox" lay-skin="primary" title="我的收藏" name="mysc" value="1"  />
       <input type="checkbox" lay-filter="checkbox" lay-skin="primary" title="今日浏览" name="jrll" value="1"  />
@@ -173,7 +172,7 @@
 <input type="checkbox" lay-filter="checkbox" lay-skin="primary" title="小区名错误" name="noxiaoqu" value="1"  id="noxiaoqu"/>
 
     </div>  </div>
-
+-->
   <div class="layui-form-item">
     <input type="hidden" name="isget" value="1" >
       <label class="layui-form-label">价格</label>
