--- a/Application/Home/View/Ziyuan/editxiaoqu.html
+++ b/Application/Home/View/Ziyuan/editxiaoqu.html
@@ -90,7 +90,7 @@
 				</div>
 			</div>
 			<br/>
-			<div class="row cl">
+			<!--<div class="row cl">
 				<label class="form-label col-xs-2 col-sm-2">
 					<span class="c-red">*</span>周边学区：
 				</label>
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <a class="layui-btn layui-btn-primary" id="cz1">重置</a>
-			</div>
+			</div>-->
 			<br/>
 			<div class="row cl">
 				<label class="form-label col-xs-4 col-sm-2">
@@ -112,12 +112,12 @@
 				<div class="formControls col-xs-4 col-sm-4">
 					<input type="text" class="input-text" value="{$xiaoqu.csjunjia}" placeholder="" id="csjunjia" name="csjunjia">
 				</div>
-				<label class="form-label col-xs-4 col-sm-2">
+				<!--<label class="form-label col-xs-4 col-sm-2">
 					座栋规则：
 				</label>
 				<div class="formControls col-xs-4 col-sm-4">
 					<input type="text" class="input-text" value="{$xiaoqu.zdguize}" placeholder="" id="zdguize" name="zdguize">
-				</div>
+				</div>-->
 			</div>
 			<br/>
 			<div class="row cl">
