--- a/Application/Home/View/Rbac/index.html
+++ b/Application/Home/View/Rbac/index.html
@@ -212,11 +212,9 @@
 						<th width="40">序号</th>
 						<th width="150">员工姓名</th>
 						<th width="150">手机号码</th>
-						<th width="150">员工编号</th>
 						<th width="90">最后登录时间</th>
 						<th width="150">最后登录IP</th>
 						<th width="100">是否已启用</th>
-						<th width="100">是否有key</th>
 						<th>用户所属角色</th>
 						<th width="100">操作</th>
 					</tr>
@@ -227,13 +225,11 @@
 						<td>{$i+$firstRow}</td>
 						<td>{$v.ygmingcheng}</td>
 						<td>{$v.dianhua}</td>
-						<td>{$v.ygbianhao}</td>
 						<td>{$v.logintime|date='y-m-d H:i',###}</td>
 						<td>{$v.loginip}</td>
 						<td class="td-status">
 						<if condition='$v["lock"]'><span class="label radius">已停用</span><else/><span class="label label-success radius">已启用</span></if>
 						</td>
-						<td><if condition='$v["keyid"]'><span class="label label-success radius">有</span><else/><span class="label  radius">无</span></if>
 						</td>
 						<td>
 							<if condition='$v["zhanghao"] == C("RBAC_SUPERADMIN")'>
@@ -256,8 +252,8 @@
 									</a>
 								</if>
 							</if>
-							<a title="编辑用户" href="javascript:;" onclick="admin_add('编辑用户','{:U('Rbac/editUser',array('id'=>$v['id']))}','800','450')" class="ml-5" style="text-decoration:none">
-								<i class="Hui-iconfont" style="font-size: 18px;">&#xe6df;</i>
+							<!--<a title="编辑用户" href="javascript:;" onclick="admin_add('编辑用户','{:U('Rbac/editUser',array('id'=>$v['id']))}','800','450')" class="ml-5" style="text-decoration:none">-->
+								<!--<i class="Hui-iconfont" style="font-size: 18px;">&#xe6df;</i>-->
 							</a>
 						</td>
 					</tr>
