--- a/Application/Home/View/Login/index.html
+++ b/Application/Home/View/Login/index.html
@@ -1,14 +1,5 @@
 ﻿<!DOCTYPE HTML>
 <html>
-<!-- +~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-| 开单大师（专业的房产ERP管理系统）
-+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-| Copyright (c) 2008-2017 http://www.kaidandashi.com All rights reserved.
-+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-| 本系统由淮南市银泰科技软件有限公司提供技术支持
-+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-| QQ号：984784483
-+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 <head>
 <meta charset="utf-8">
 <meta name="renderer" content="webkit|ie-comp|ie-stand">
@@ -38,20 +29,20 @@
   <div id="loginform" class="loginBox">
     <form class="form form-horizontal" id="frmlogin" action="__URL__/Login" method="post">
       <div class="row cl">
-        <label class="form-label col-xs-4"><i class="Hui-iconfont">&#xe60d;</i></label>
+        <label class="form-label col-xs-3"><i class="Hui-iconfont">&#xe60d;</i></label>
         <div class="formControls col-xs-8">
           <input id="username" name="username" type="text" placeholder="账户" class="input-text size-L">
           <input id="" name="gongsiid" type="hidden" placeholder="公司账户" value="10000">
         </div>
       </div>
       <div class="row cl">
-        <label class="form-label col-xs-4"><i class="Hui-iconfont">&#xe60e;</i></label>
+        <label class="form-label col-xs-3"><i class="Hui-iconfont">&#xe60e;</i></label>
         <div class="formControls col-xs-8">
           <input id="password" name="password" type="password" placeholder="密码" class="input-text size-L">
         </div>
       </div>
       <div class="row cl">
-        <div class="formControls col-xs-8 col-xs-offset-4">
+        <div class="formControls col-xs-8 col-xs-offset-3">
           <input id="yzm" name="yzm" class="input-text size-L" type="text" placeholder="验证码" onblur="" onclick="" value="" style="width:100px;">
           <span class="label label-danger">{$verifyerror}</span>
         <img class="img" src="__CONTROLLER__/verifyImg" width="140px" height="40px" 
@@ -60,14 +51,14 @@
       </div>
       <div class="row cl">
         <div class="formControls col-xs-8 col-xs-offset-4">
-          <input name="" type="submit" class="btn btn-success radius size-XL" value="&nbsp;开&nbsp;&nbsp;&nbsp;&nbsp;单&nbsp;">
+          <input name="" type="submit" class="btn btn-success radius size-XL" value="登录">
           <input name="" type="reset" class="btn btn-default radius size-L hidden" value="&nbsp;取&nbsp;&nbsp;&nbsp;&nbsp;消&nbsp;">
         </div>
       </div>
     </form>
   </div>
 </div>
-<div class="footer">Copyright  2008-2017 <a href="http://www.kaidandashi.com/" target="_blank">开单大师</a> - 专业 专注 用心 </div>
+<!--<div class="footer">Copyright  2017-2020 <a href="" target="_blank"></a> - 专业 专注 用心 </div>-->
 <script type="text/javascript" src="__PUBLIC__/lib/jquery/1.9.1/jquery.min.js"></script> 
 <script type="text/javascript" src="__PUBLIC__/static/h-ui/js/H-ui.min.js"></script>
 <script>
