--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<!-- +~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-| 开单大师（专业的房产ERP管理系统）
-+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-| Copyright (c) 2008-2017 http://www.kaidandashi.com All rights reserved.
-+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-| 本系统由淮南市银泰科技软件有限公司提供技术支持
-+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-| QQ号：984784483
-+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-  <title>开单大师（专业的房产ERP管理系统）</title>
+  <title>天天淘房</title>
   <link rel="Bookmark" href="__PUBLIC__/favicon.ico" >
   <link rel="stylesheet" href="__PUBLIC__/lib/layui/css/layui.css"  media="all">
   <link rel="stylesheet" type="text/css" href="__PUBLIC__/lib/ceshi/bootstrap-3.3.7/dist/css/bootstrap.min.css" />
