--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -149,19 +149,26 @@
             <a href="javarcript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
               <i class="glyphicon glyphicon-usd"></i>&nbsp;订单管理<span class="caret"></span>
             </a>
+              <div class="dropdown-menu1">
+                  <i class="glyphicon glyphicon-triangle-top" style="left: 250px;font-size:20px;color: #fff; "></i>
+                  <div class="s_nav">
+                      <div style="width: 100%;border-left: 5px solid #009688;padding: 5px;">
+                          <div style="width: 100% ; padding: 5px;display: block;margin-bottom: 10px;">
+                              <div style="float: left;width: 350px;">
+                                  <ul>
+                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Order/order')}" data-title="会员管理" href="javascript:;">|&nbsp;订单管理&nbsp;|</li>
+                                  </ul>
+                              </div>
+                              <div style="clear: both;"></div>
+                          </div>
 
-            <div class="dropdown-menu1">
-                <i class="glyphicon glyphicon-triangle-top" style="left: 250px;font-size:20px;color: #fff; "></i>
-                <div class="s_nav">
-                    <div style="width: 100%;border-left: 5px solid #009688;padding: 5px;">
 
-
-                      <div style="clear: both;"></div>
-                    </div>
-                </div>
-            </div>
+                          <div style="clear: both;"></div>
+                      </div>
+                  </div>
+              </div>
           </li>
-          <li class="dropdown">
+          <!--<li class="dropdown">
             <a href="javarcript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
               <i class="glyphicon glyphicon-stats"></i>&nbsp;数据统计<span class="caret"></span>
             </a>
@@ -175,7 +182,7 @@
                     </div>
                 </div>
             </div>
-          </li>
+          </li>-->
 
         <li class="dropdown">
                 <a href="javarcript:void(0);" class="dropdown-toggle acc" data-toggle="dropdown">
@@ -189,7 +196,7 @@
                             <div style="width: 100% ; padding: 5px;display: block;margin-bottom: 10px;">
                                 <div style="float: left;width: 350px;">
                                     <ul>
-                                        <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Rbac/bumen')}" data-title="会员管理" href="javascript:;">|&nbsp;会员管理&nbsp;|</li>
+                                        <li style="float: left;cursor:pointer" class="tab" data-href="{:U('User/user')}" data-title="会员管理" href="javascript:;">|&nbsp;会员管理&nbsp;|</li>
                                     </ul>
                                 </div>
                                 <div style="clear: both;"></div>
