--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -231,10 +231,11 @@
                               <div style="float: left; width: 100px; padding-left: 50px;"><span>资源</span></div>
                               <div style="float: left;width: 350px;">
                                   <ul>
-                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Ziyuan/xingzhengqu')}" data-title="行政区管理" href="javascript:;">|&nbsp;行政区管理&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Ziyuan/pianqu')}" data-title="片区管理" href="javascript:;">&nbsp;片区管理&nbsp;|</li>
+                                     <!-- <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Ziyuan/xingzhengqu')}" data-title="行政区管理" href="javascript:;">|&nbsp;行政区管理&nbsp;|</li>
+                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Ziyuan/pianqu')}" data-title="片区管理" href="javascript:;">&nbsp;城市管理&nbsp;|</li>
+                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Ziyuan/region')}" data-title="片区管理" href="javascript:;">&nbsp;片区管理&nbsp;|</li>-->
                                       <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Ziyuan/xiaoqu')}" data-title="小区管理" href="javascript:;">&nbsp;小区管理&nbsp;|</li>
-                                      <!--<li style="float: left;cursor:pointer" class="tab" data-href="{:U('Ziyuan/xuequ')}" data-title="学区管理" href="javascript:;">&nbsp;学区管理&nbsp;|</li><br />-->
+                                     <!-- <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Ziyuan/xuequ')}" data-title="学区管理" href="javascript:;">&nbsp;学区管理&nbsp;|</li><br />-->
 
                                   </ul>
                               </div> 
