--- a/Application/Home/View/Fangyuan/addesfy.html
+++ b/Application/Home/View/Fangyuan/addesfy.html
@@ -103,6 +103,8 @@
     <div class="layui-input-inline">
       <input type="text" name="xiaoqum" lay-verify="required" autocomplete="off" placeholder="点击搜索" class="layui-input" id="sousuo1" readonly="">
       <input type="hidden" name="xiaoqu" id="xiaoqu">
+      <input type="hidden" name="xingzhengqu" id="xingzhengqu">
+      <input type="hidden" name="ssarea" id="ssarea">
       <div id="greetings" >
       <input type="text" name="" autocomplete="off" placeholder="请搜索小区并选择" class="layui-input" id="sousuo">
            <ul id="tcontent">
@@ -653,6 +655,7 @@ layui.use(['form', 'layedit', 'laydate'], function(){
             for(var i in district){
               var li=$("<li></li>");
               $(li).attr('dataid',district[i]['id']);
+              $(li).attr('datassarea',district[i]['ssarea']);
               $(li).html(district[i]['xiaoqum']);
               $("#tcontent").append(li);
             }
@@ -670,7 +673,9 @@ layui.use(['form', 'layedit', 'laydate'], function(){
      var count=$(this).index();//获取li的下标  
      var Tresult=Uarry.eq(count).text();
      var xiaoquid=Uarry.eq(count).attr('dataid');
+     var ssarea=Uarry.eq(count).attr('datassarea');
      $("#xiaoqu").val(xiaoquid);
+     $("#ssarea").val(ssarea);
      $("#sousuo1").val(Tresult);
      $("#sousuo").val(""); 
      $("#greetings").hide(); 
