--- a/Application/Home/View/Ziyuan/editxiaoqu.html
+++ b/Application/Home/View/Ziyuan/editxiaoqu.html
@@ -113,7 +113,7 @@
                 </div>
                 <a class="layui-btn layui-btn-primary" id="cz1">重置</a>
 			</div>-->
-			<br/>
+			<!--<br/>
 			<div class="row cl">
 				<label class="form-label col-xs-4 col-sm-2">
 					出售均价：
@@ -121,13 +121,13 @@
 				<div class="formControls col-xs-4 col-sm-4">
 					<input type="text" class="input-text" value="{$xiaoqu.csjunjia}" placeholder="" id="csjunjia" name="csjunjia">
 				</div>
-				<!--<label class="form-label col-xs-4 col-sm-2">
+				<label class="form-label col-xs-4 col-sm-2">
 					座栋规则：
 				</label>
 				<div class="formControls col-xs-4 col-sm-4">
 					<input type="text" class="input-text" value="{$xiaoqu.zdguize}" placeholder="" id="zdguize" name="zdguize">
-				</div>-->
-			</div>
+				</div>
+			</div>-->
 			<br/>
 			<div class="row cl">
 				<label class="form-label col-xs-4 col-sm-2">
