--- a/Application/Home/View/User/user.html
+++ b/Application/Home/View/User/user.html
@@ -1,13 +1,4 @@
 <extend name="Common/index" />
-<!-- +~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-| 开单大师（专业的房产ERP管理系统）
-+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-| Copyright (c) 2008-2017 http://www.kaidandashi.com All rights reserved.
-+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-| 本系统由淮南市银泰科技软件有限公司提供技术支持
-+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-| QQ号：984784483
-+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 <block name="css">
 	<style type="text/css">
 		.pagination {
@@ -230,9 +221,14 @@
 						<if condition='$v["status"]'><span class="label radius">已停用</span><else/><span class="label label-success radius">已启用</span></if>
 						</td>
 						</td>
-
 						<td class="td-manage">
-							<a style="text-decoration:none" onClick="admin_stop(this,'{$v.id}')" href="javascript:;" title="停用"><i class="Hui-iconfont" style="font-size: 20px;">&#xe631;</i></a>
+							<if condition='$v["status"]'>
+								<a onClick="admin_start(this,{$v.id})" href="javascript:;" title="启用" style="text-decoration:none"><i class="Hui-iconfont" style="font-size: 20px;">&#xe615;</i></a>
+								<else/>
+								<a style="text-decoration:none" onClick="admin_stop(this,'{$v.id}')" href="javascript:;" title="停用">
+									<i class="Hui-iconfont" style="font-size: 20px;">&#xe631;</i>
+								</a>
+							</if>
 							</a>
 						</td>
 					</tr>
@@ -258,32 +254,6 @@
 			w		弹出层宽度（缺省调默认值）
 			h		弹出层高度（缺省调默认值）
 		*/
-		/*管理员-增加*/
-		function admin_add(title,url,w,h){
-			layer_show(title,url,w,h);
-		}
-		/*管理员-删除*/
-		function admin_del(obj,id){
-			layer.confirm('管理员删除须谨慎，确认要删除吗？',function(index){
-				$.ajax({
-					type: 'POST',
-					url: '{:U('Rbac/delUser')}',
-					data: {'id':id},
-					dataType: 'json',
-					success: function(data){
-						$(obj).parents("tr").remove();
-						layer.msg('已删除!',{icon:1,time:1000});
-					},
-					error:function(data) {
-						console.log(data.msg);
-					},
-				});
-			});
-		}
-		/*管理员-编辑*/
-		function admin_edit(title,url,id,w,h){
-			layer_show(title,url,w,h);
-		}
 		/*管理员-停用*/
 		function admin_stop(obj,id){
 			layer.confirm('确认要停用吗？',function(index){
@@ -322,7 +292,7 @@
 			layer.confirm('确认要启用吗？',function(index){
 				$.ajax({
 					type: 'POST',
-					url: '{:U('Rbac/startUser')}',
+					url: '{:U('User/startUser')}',
 					data: {'id':id},
 					dataType: 'json',
 					success: function(data){
