--- a/Application/Home/View/Ziyuan/xiaoqu.html
+++ b/Application/Home/View/Ziyuan/xiaoqu.html
@@ -242,7 +242,7 @@
 			</thead>
 			<tbody id="xsjxiaoq">
 				<volist name="xiaoqu" id="xq">
-					<tr class="text-c" data-href="{:U('Ziyuan/xiaoqurr',array('id'=>$xq['id']))}" data-title="<if condition='$xq.xiaoqum'>{$xq.xiaoqum}</if>" ondblclick="Hui_admin_tabb(this)">
+					<tr class="text-c" data-title="<if condition='$xq.xiaoqum'>{$xq.xiaoqum}</if>" ondblclick="Hui_admin_tabb(this)">
 						<td>{$i+$firstRow}</td>
 						<td id="td">
 								{$xq.xiaoqum}
