--- a/Application/Home/View/Eveluate/eveluate.html
+++ b/Application/Home/View/Eveluate/eveluate.html
@@ -1,4 +1,13 @@
 <extend name="Common/index" />
+<!-- +~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+| 开单大师（专业的房产ERP管理系统）
++~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+| Copyright (c) 2008-2017 http://www.kaidandashi.com All rights reserved.
++~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+| 本系统由淮南市银泰科技软件有限公司提供技术支持
++~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+| QQ号：984784483
++~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 <block name="css">
 	<style type="text/css">
 		.pagination {
@@ -174,16 +183,6 @@
 	<link rel="stylesheet" href="__PUBLIC__/lib/layui/css/layui.css" media="all">
 </block>
 <block name="content">
-	<nav class="breadcrumb hidden">
-		<i class="Hui-iconfont">&#xe67f;</i>
-		<a href="{:U('Index/welcome')}">首页</a>
-		<span class="c-gray en">&gt;</span> 管理后台
-		<span class="c-gray en">&gt;</span> 账户
-		<span class="c-gray en">&gt;</span> 用户管理
-		<a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" >
-			<i class="Hui-iconfont">&#xe68f;</i>
-		</a>
-	</nav>
 	<div class="page-container">
 		<div class="cl pd-5 bg-1 bk-gray ">
 			<span class="l">
@@ -201,40 +200,28 @@
 				<thead>
 					<tr class="text-c">
 						<th width="40">序号</th>
-
-						<th width="90">头像</th>
-						<th width="150">称昵</th>
-						<th width="150">手机号码</th>
-						<th width="90">地址</th>
-						<th width="40">APPID</th>
-						<th width="90">最后登录时间</th>
-						<th width="100">是否已启用</th>
-						<th width="100">操作</th>
+						<th width="150">用户</th>
+						<th width="150">小区名</th>
+						<th width="150">面积</th>
+						<th width="150">户型</th>
+						<th width="150">朝向</th>
+						<th width="90">楼层</th>
+						<th width="100">手机号</th>
+						<th width="100">时间</th>
 					</tr>
 				</thead>
 			<tbody id="xsjyh">
-				<volist name="user" id="v">
-					<tr class="text-c">
-						<td>{$i+$firstRow}</td>
-						<td><img src="{$v['avatarurl']}" style="width: 50px;height: 50px"></td>
-						<td>{$v.nickname}</td>
+				<volist name="list" id="v">
+						<tr class="text-c">
+						<td>{$v.id}</td>
+						<td>{:getUserNameById($v['user_id'])}</td>
+						<td>{$v.mianji}</td>
+						<td>{$v.xiaoqum}</td>
+						<td>{$v.huxing}</td>
+						<td>{$v.chaoxiang}</td>
+						<td>{$v.louceng}</td>
 						<td>{$v.mobile}</td>
-						<td>{$v.province}{$v.city}</td>
-						<td>{$v.appid}</td>
-						<td>{$v.last_time|date='y-m-d H:i',###}</td>
-						<td class="td-status">
-						<if condition='$v["status"]'><span class="label radius">已停用</span><else/><span class="label label-success radius">已启用</span></if>
-						</td>
-						</td>
-						<td class="td-manage">
-							<if condition='$v["status"]'>
-								<a onClick="admin_start(this,{$v.id})" href="javascript:;" title="启用" style="text-decoration:none"><i class="Hui-iconfont" style="font-size: 20px;">&#xe615;</i></a>
-								<else/>
-								<a style="text-decoration:none" onClick="admin_stop(this,'{$v.id}')" href="javascript:;" title="停用">
-									<i class="Hui-iconfont" style="font-size: 20px;">&#xe631;</i>
-								</a>
-							</if>
-							</a>
+						<td>{$v.created_at|date='Y-m-d H:i',###}</td>
 						</td>
 					</tr>
 				</volist>
@@ -247,8 +234,54 @@
 	</div>
 </block>
 <block name="js">
-
+	<script type="text/javascript" src="lib/My97DatePicker/4.8/WdatePicker.js"></script>
+	<script type="text/javascript" src="lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
+	<script type="text/javascript" src="lib/laypage/1.2/laypage.js"></script>
 	<script type="text/javascript">
+		/*
+			参数解释：
+			title	标题
+			url		请求的url
+			id		需要操作的数据id
+			w		弹出层宽度（缺省调默认值）
+			h		弹出层高度（缺省调默认值）
+		*/
+		/*管理员-增加*/
+		function admin_add(title,url,w,h){
+			layer_show(title,url,w,h);
+		}
+		/*管理员-删除*/
+		function admin_del(obj,id){
+			layer.confirm('管理员删除须谨慎，确认要删除吗？',function(index){
+				$.ajax({
+					type: 'POST',
+					url: '{:U('Rbac/delUser')}',
+					data: {'id':id},
+					dataType: 'json',
+					success: function(data){
+						$(obj).parents("tr").remove();
+						layer.msg('已删除!',{icon:1,time:1000});
+					},
+					error:function(data) {
+						console.log(data.msg);
+					},
+				});
+			});
+		}
+		/*管理员-编辑*/
+		function admin_edit(title,url,id,w,h){
+			layer_show(title,url,w,h);
+		}
+		/*管理员-停用*/
+		function admin_stop(obj,id){
+			layer.confirm('确认要停用吗？',function(index){
+				//此处请求后台程序，下方是成功后的前台处理……
+				$(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_start(this,id)" href="javascript:;" title="启用" style="text-decoration:none"><i class="Hui-iconfont">&#xe615;</i></a>');
+				$(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">已禁用</span>');
+				$(obj).remove();
+				layer.msg('已停用!',{icon: 5,time:1000});
+			});
+		}
 		/*管理员-停用*/
 		function admin_stop(obj,id){
 			layer.confirm('确认要停用吗？',function(index){
@@ -277,7 +310,7 @@
 			layer.confirm('确认要启用吗？',function(index){
 				$.ajax({
 					type: 'POST',
-					url: '{:U('User/startUser')}',
+					url: '{:U('Rbac/startUser')}',
 					data: {'id':id},
 					dataType: 'json',
 					success: function(data){
