--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -58,7 +58,8 @@
                               <div style="float: left;width: 350px;">
                                   <ul>
                                       <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Fangyuan/Esfy')}" data-title="二手房源" href="javascript:;">|&nbsp;房屋信息管理&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('News/news')}" data-title="新闻管理" href="javascript:;">|&nbsp;新闻管理&nbsp;|</li>
+                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('News/news')}" data-title="新闻管理" href="javascript:;">&nbsp;新闻管理&nbsp;|</li>
+                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Eveluate/eveluate')}" data-title="新闻管理" href="javascript:;">&nbsp;房产估计管理&nbsp;|</li>
                                      <!-- <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Fangyuan/Esfy')}" data-title="二手房源" href="javascript:;">|&nbsp;房屋信息审核&nbsp;|</li>-->
                                       <!--<li style="float: left;cursor:pointer" class="tab1">&nbsp;一手房源&nbsp;|</li>
                                       <li style="float: left;cursor:pointer" class="tab1">&nbsp;地图找房&nbsp;|</li>
