--- a/Application/Home/View/News/news.html
+++ b/Application/Home/View/News/news.html
@@ -217,7 +217,7 @@
 						<td>{$v['id']}</td>
 						<td><a href="{:U('Fangyuan/neirong',array('id'=>$v['fangyuan_id']))}">{$v['title']}</a></td>
 						<td>{$v.desc}</td>
-						<td>{$v.creater_id}</td>
+						<td>{:getAdminUserNameById($v['creater_id'])}</td>
 						<td>{$v.order}</td>
 						<td><if condition='$v["new_status"]'><span class="label radius">未显示</span><else/><span class="label label-success radius">已显示</span></if></td>
 							<td>{$v.created_at|date='Y-m-d H:i',###}</td>
