--- a/Application/Home/View/Fangyuan/esfy.html
+++ b/Application/Home/View/Fangyuan/esfy.html
@@ -84,7 +84,7 @@
       <select name="leixing" >
         <option value="1">出售</option>
         <option value="2">出租</option>
-        <option value="">全部</option>
+   <!--     <option value="">全部</option>-->
       </select>
     </div>
       <div class="layui-input-inline" style="width:400px;">
