--- a/Application/Home/View/Fangyuan/neirong.html
+++ b/Application/Home/View/Fangyuan/neirong.html
@@ -634,7 +634,7 @@
 					success:function(data){
 						var pics = data.pics;
 						for(var i in pics){
-							var img='<div class="row"><div class="col-sm-3 col-md-3"><div class="thumbnail mb-10"><div class="picbox"><a href="'+pics[i]['image']+'" data-lightbox="gallery" data-title=""><img class="img-responsive1" width="220px" height="166px" src="'+pics[i]['image']+'" alt="..." /></a></div><div class="caption mt-10"><p><a style="text-decoration:none" class=" btn btn-danger pd-5" onClick="picture_del(this,'+pics[i]['id']+')" href="javascript:;" >删除</a> <a download="'+pics[i]['image']+'" href="'+pics[i]['image']+'" class="btn btn-default" role="button">下载</a></p><p></p></div></div></div></div>';
+							var img='<div class="row"><div class="col-sm-3 col-md-3"><div class="thumbnail mb-10"><div class="picbox"><a href="/Upload/'+pics[i]['image']+'" data-lightbox="gallery" data-title=""><img class="img-responsive1" width="220px" height="166px" src="/Upload/'+pics[i]['image']+'" alt="..." /></a></div><div class="caption mt-10"><p><a style="text-decoration:none" class=" btn btn-danger pd-5" onClick="picture_del(this,'+pics[i]['id']+')" href="javascript:;" >删除</a> <a download="/Upload/'+pics[i]['image']+'" href="/Upload/'+pics[i]['image']+'" class="btn btn-default" role="button">下载</a></p><p></p></div></div></div></div>';
 							$("#fy_img_div").append(img);
 						}
 					}
@@ -675,7 +675,7 @@
 					var pics = data.pics;
 					$("#fy_img_div").empty();
 					for(var i in pics){
-						var img='<div class="row"><div class="col-sm-3 col-md-3"><div class="thumbnail mb-10"><div class="picbox"><a href="'+pics[i]['image']+'" data-lightbox="gallery" data-title=""><img class="img-responsive1" width="220px" height="166px"  src="'+pics[i]['image']+'" alt="..." /></a></div><div class="caption mt-10"><p><a style="text-decoration:none" class=" btn btn-danger pd-5" onClick="picture_del(this,'+pics[i]['id']+')" href="javascript:;" >删除</a> <a download="'+'/'+pics[i]['image']+'" href="'+pics[i]['image']+'" class="btn btn-default" role="button">下载</a></p><p></p></div></div></div></div>';
+						var img='<div class="row"><div class="col-sm-3 col-md-3"><div class="thumbnail mb-10"><div class="picbox"><a href="/Upload/'+pics[i]['image']+'" data-lightbox="gallery" data-title=""><img class="img-responsive1" width="220px" height="166px"  src="/Upload/'+pics[i]['image']+'" alt="..." /></a></div><div class="caption mt-10"><p><a style="text-decoration:none" class=" btn btn-danger pd-5" onClick="picture_del(this,'+pics[i]['id']+')" href="javascript:;" >删除</a> <a download="/Upload/'+'/'+pics[i]['image']+'" href="/Upload/'+pics[i]['image']+'" class="btn btn-default" role="button">下载</a></p><p></p></div></div></div></div>';
 						$("#fy_img_div").append(img);
 					}
 				}
