--- a/Application/Home/View/News/add.html
+++ b/Application/Home/View/News/add.html
@@ -18,13 +18,13 @@
                         <div class="layui-form-item">
                             <label class="layui-form-label">标题</label>
                             <div class="layui-input-block">
-                                <input type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入标题" class="layui-input">
+                                <input type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入标题" class="layui-input" required>
                             </div>
                         </div>
                         <div class="layui-form-item layui-form-text">
                             <label class="layui-form-label">新闻描述</label>
                             <div class="layui-input-block">
-                                <textarea placeholder="请输入内容" class="layui-textarea" name="desc"></textarea>
+                                <textarea placeholder="请输入内容" class="layui-textarea" name="desc" required></textarea>
                             </div>
                         </div>
                         <div class="layui-form-item layui-form-text">
@@ -71,7 +71,12 @@
     <script type="text/javascript" src="__PUBLIC__/lib/ueditor/1.4.3/ueditor.all.js"></script>
     <!-- 实例化编辑器 -->
     <script type="text/javascript">
-        var ue = UE.getEditor('contents');
+        var ue = UE.getEditor('contents',{
+            toolbars: [
+                ['fullscreen', 'source', 'undo', 'redo'],
+                ['bold', 'italic', 'underline', 'fontborder', 'strikethrough', 'superscript', 'subscript', 'removeformat', 'formatmatch', 'autotypeset', 'blockquote', 'pasteplain', '|', 'forecolor', 'backcolor', 'insertorderedlist', 'insertunorderedlist', 'selectall', 'cleardoc']
+            ]
+        });
     </script>
 </block>
 
