--- a/Application/Home/View/News/edit.html
+++ b/Application/Home/View/News/edit.html
@@ -19,19 +19,19 @@
                         <div class="layui-form-item">
                             <label class="layui-form-label">标题</label>
                             <div class="layui-input-block">
-                                <input type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入标题" class="layui-input" value="{$detail['title']}">
+                                <input type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入标题" class="layui-input" value="{$detail['title']}" required>
                             </div>
                         </div>
                         <div class="layui-form-item layui-form-text">
                             <label class="layui-form-label">新闻描述</label>
                             <div class="layui-input-block">
-                                <textarea placeholder="请输入内容" class="layui-textarea" name="desc">{$detail['desc']}</textarea>
+                                <textarea placeholder="请输入内容" class="layui-textarea" name="desc" required>{$detail['desc']}</textarea>
                             </div>
                         </div>
                         <div class="layui-form-item layui-form-text">
                             <label class="layui-form-label">正文</label>
                             <div class="layui-input-block">
-                               <textarea id="contents" name="contents">{$detail['contents']}</textarea>
+                               <textarea id="contents" name="contents" required>{$detail['contents']}</textarea>
                             </div>
                         </div>
                         <div class="layui-form-item">
@@ -72,7 +72,12 @@
     <script type="text/javascript" src="__PUBLIC__/lib/ueditor/1.4.3/ueditor.all.js"></script>
     <!-- 实例化编辑器 -->
     <script type="text/javascript">
-        var ue = UE.getEditor('contents');
+        var ue = UE.getEditor('contents',{
+            toolbars: [
+                ['fullscreen', 'source', 'undo', 'redo'],
+                ['bold', 'italic', 'underline', 'fontborder', 'strikethrough', 'superscript', 'subscript', 'removeformat', 'formatmatch', 'autotypeset', 'blockquote', 'pasteplain', '|', 'forecolor', 'backcolor', 'insertorderedlist', 'insertunorderedlist', 'selectall', 'cleardoc']
+            ]
+        });
     </script>
 </block>
 
