--- a/Application/Home/View/News/news.html
+++ b/Application/Home/View/News/news.html
@@ -219,11 +219,11 @@
 						<td>{$v.desc}</td>
 						<td>{:getAdminUserNameById($v['creater_id'])}</td>
 						<td>{$v.order}</td>
-						<td><if condition='$v["new_status"]'><span class="label radius">未显示</span><else/><span class="label label-success radius">已显示</span></if></td>
-							<td>{$v.created_at|date='Y-m-d H:i',###}</td>
-						</td>
+						<td><if condition='$v["new_status"]'><span class="label label-success radius">已显示</span><else/><span class="label radius">未显示</span></if></td>
+						<td>{$v.created_at|date='Y-m-d H:i',###}</td>
 						<td class="td-manage">
-							<a style="text-decoration:none" href="{:U('news/edit',array('id'=>$v['id']))};" title="查看"><i class="layui-icon"></i></a>
+							<a style="text-decoration:none" href="{:U('news/edit',array('id'=>$v['id']))};" title="查看"><i class="layui-icon" style="font-size: 22px;"></i></a>
+							<a style="text-decoration:none" href="{:U('news/delete',array('id'=>$v['id']))};" title="删除"><i class="Hui-iconfont" style="font-size: 22px;">&#xe6e2;</i></a>
 							</a>
 						</td>
 					</tr>
