--- a/Application/Home/View/News/news.html
+++ b/Application/Home/View/News/news.html
@@ -203,10 +203,11 @@
 						<th width="40">序号</th>
 						<th width="150">标题</th>
 						<th width="150">描述</th>
-						<th width="150">创建人</th>
+						<th width="90">查看人数</th>
 						<th width="90">排序ID</th>
-						<th width="90">是否显示</th>
 						<th width="90">创建时间</th>
+						<th width="150">创建人</th>
+						<th width="90">是否显示</th>
 						<th width="100">操作</th>
 
 					</tr>
@@ -217,13 +218,14 @@
 						<td>{$v['id']}</td>
 						<td><a href="{:U('Fangyuan/neirong',array('id'=>$v['fangyuan_id']))}">{$v['title']}</a></td>
 						<td>{$v.desc}</td>
-						<td>{:getAdminUserNameById($v['creater_id'])}</td>
+						<td>{$v.click}</td>
 						<td>{$v.order}</td>
-						<td><if condition='$v["new_status"]'><span class="label label-success radius">已显示</span><else/><span class="label radius">未显示</span></if></td>
 						<td>{$v.created_at|date='Y-m-d H:i',###}</td>
+						<td>{:getAdminUserNameById($v['creater_id'])}</td>
+							<td><if condition='$v["new_status"]'><span class="label label-success radius">已显示</span><else/><span class="label radius">未显示</span></if></td>
 						<td class="td-manage">
 							<a style="text-decoration:none" href="{:U('news/edit',array('id'=>$v['id']))};" title="查看"><i class="layui-icon" style="font-size: 22px;"></i></a>
-							<a style="text-decoration:none" href="{:U('news/delete',array('id'=>$v['id']))};" title="删除"><i class="Hui-iconfont" style="font-size: 22px;">&#xe6e2;</i></a>
+							<a style="text-decoration:none" href="javascript:admin_new_del({$v['id']})" title="删除"><i class="Hui-iconfont" style="font-size: 22px;">&#xe6e2;</i></a>
 							</a>
 						</td>
 					</tr>
@@ -240,6 +242,12 @@
 	<script src="__PUBLIC__/lib/layui/layui.js" charset="utf-8"></script>
 	<script type="text/javascript">
 
+		/*管理员-角色-删除*/
+		function admin_new_del(id){
+			layer.confirm('新闻删除须谨慎，确认要删除吗？',function(index){
+				window.location.href = "{:U('news/delete')}"+'?id='+id;
+			});
+		}
 	</script>
 </block>
 
