--- a/Application/Home/View/News/news.html
+++ b/Application/Home/View/News/news.html
@@ -216,7 +216,7 @@
 				<volist name="list" id="v">
 						<tr class="text-c">
 						<td>{$v['id']}</td>
-						<td><a href="{:U('Fangyuan/neirong',array('id'=>$v['fangyuan_id']))}">{$v['title']}</a></td>
+						<td>{$v['title']}</td>
 						<td>{$v.desc}</td>
 						<td>{$v.click}</td>
 						<td>{$v.order}</td>
