--- a/Application/Home/View/Fangyuan/addesfy.html
+++ b/Application/Home/View/Fangyuan/addesfy.html
@@ -148,32 +148,33 @@
 
   <div class="layui-form-item" >
     <div class="layui-inline">
-    <label class="layui-form-label">姓名</label>
+    <label class="layui-form-label" style="color:#f00;">姓名</label>
     <div class="layui-input-inline">
-      <input type="text" name="yezhu" autocomplete="off" placeholder="" class="layui-input">
+      <input type="text" name="yezhu" autocomplete="off" placeholder="请输入姓名" class="layui-input" lay-verify="required">
     </div>
-    <div class="layui-input-inline" style="width:100px;">
+   <!-- <div class="layui-input-inline" style="width:100px;">
       <select name="yezhulx" >
       <option value="">请选择</option>
         <foreach name="yezhulx" item="pz">
                           <option value="{$pz.lxid}" <if condition="$pz['lxid'] eq 1">selected=""</if>>{$pz.lxming}</option>
                         </foreach>
       </select>
-    </div>
+    </div>-->
   </div>
   <div class="layui-inline">
     <label class="layui-form-label" style="color:#f00;">电话</label>
     <div class="layui-input-inline">
-      <input type="tel" name="yezhudianhua" lay-verify="phone" autocomplete="off" class="layui-input">
+      <input type="tel" name="yezhudianhua" lay-verify="phone" autocomplete="off" class="layui-input" >
     </div>
-    <div class="layui-input-inline" style="width:100px;">
+    <!--<div class="layui-input-inline" style="width:100px;">
       <select name="yezhugx" >
       <option value="">请选择</option>
         <foreach name="yezhugx" item="pz">
                             <option value="{$pz.lxid}" <if condition="$pz['lxid'] eq 1">selected=""</if>>{$pz.lxming}</option>
                           </foreach>
       </select>
-    </div>
+    </div>-->
+  </div>
   </div>
   </div>
 
@@ -200,9 +201,9 @@
 
   <div class="layui-form-item">
     <div class="layui-inline">
-      <label class="layui-form-label">房源标题</label>
+      <label class="layui-form-label" style="color:#f00;">房源标题</label>
       <div class="layui-input-block">
-        <input type="text" name="fybiaoti"  autocomplete="off" placeholder="" class="layui-input">
+        <input type="text" name="fybiaoti"  autocomplete="off" placeholder="" class="layui-input" lay-verify="required">
       </div>
     </div>
     <if condition="($_GET['jylx'] eq 1) or ($_GET['jylx'] eq 3) ">
@@ -381,11 +382,17 @@
       </div>
     </div>
     <div class="layui-inline">
+      <label class="layui-form-label">产权年限</label>
+      <div class="layui-input-inline">
+        <input type="text" name="cqnianxian"  autocomplete="off" placeholder="请输入" class="layui-input" value="">
+      </div>
+    </div>
+    <!--<div class="layui-inline">
       <label class="layui-form-label" style="color:#f00;">产证日期</label>
       <div class="layui-input-inline">
         <input type="text" name="czriqi" id="date"  placeholder="yyyy-mm-dd" autocomplete="off" class="layui-input" onclick="layui.laydate({elem: this})" value="" >
       </div>
-    </div>
+    </div>-->
     <!--<div class="layui-inline">
       <input type="checkbox" name="man2" title="满两年" value="1">
       <input type="checkbox" name="weiyi" title="唯一住房" value="1">
@@ -394,7 +401,7 @@
   </div>
 
   <div class="layui-form-item">
-    <div class="layui-inline">
+   <!-- <div class="layui-inline">
       <label class="layui-form-label" style="color:#f00;">产权性质</label>
       <div class="layui-input-block">
         <select name="cqxingzhi" lay-filter="aihao" lay-verify="required" lay-verify="required">
@@ -405,13 +412,8 @@
           </select>
         </select>
       </div>
-    </div>
-    <div class="layui-inline">
-      <label class="layui-form-label">产权年限</label>
-      <div class="layui-input-inline">
-        <input type="text" name="cqnianxian"  autocomplete="off" placeholder="请输入" class="layui-input" value="">
-      </div>
-    </div>
+    </div>-->
+
   </div>
 
  <!-- <div class="layui-form-item">
@@ -464,12 +466,8 @@
     </div>
   </div>
 
-
-
-
-
 <div class="layui-form-item layui-form-text">
-    <label class="layui-form-label">备注</label>
+    <label class="layui-form-label">描述</label>
     <div class="layui-input-block">
       <textarea placeholder="请输入内容" class="layui-textarea" name="beizhu"></textarea>
     </div>
