--- a/Application/Home/View/Fangyuan/addesfy.html
+++ b/Application/Home/View/Fangyuan/addesfy.html
@@ -203,18 +203,10 @@
     <div class="layui-inline">
       <label class="layui-form-label" style="color:#f00;">房源标题</label>
       <div class="layui-input-block">
-        <input type="text" name="fybiaoti"  autocomplete="off" placeholder="" class="layui-input" lay-verify="required">
+        <input type="text" name="fybiaoti"  autocomplete="off" placeholder="" class="layui-input" lay-verify="required" style="width: 550px;">
       </div>
     </div>
-    <if condition="($_GET['jylx'] eq 1) or ($_GET['jylx'] eq 3) ">
-    <div class="layui-inline">
-      <label class="layui-form-label" style="color:#f00;">售价</label>
-      <div class="layui-input-inline" style="width:70px;">
-        <input type="text" name="shoujia"  autocomplete="off" placeholder="" class="layui-input" lay-verify="shuju" >
-      </div>
-      <div class="layui-form-mid layui-word-aux" style="font-size: 16px">万元</div>
-    </div>
-    </if>
+
 
   </div>
 
@@ -226,6 +218,15 @@
       </div>
       <div class="layui-form-mid layui-word-aux" style="font-size: 16px">平方米</div>
     </div>
+  <if condition="($_GET['jylx'] eq 1) or ($_GET['jylx'] eq 3) ">
+    <div class="layui-inline">
+      <label class="layui-form-label" style="color:#f00;">售价</label>
+      <div class="layui-input-inline" style="width:70px;">
+        <input type="text" name="shoujia"  autocomplete="off" placeholder="" class="layui-input" lay-verify="shuju" >
+      </div>
+      <div class="layui-form-mid layui-word-aux" style="font-size: 16px">万元</div>
+    </div>
+  </if>
     <if condition="($_GET['jylx'] eq 2) or ($_GET['jylx'] eq 3) ">
       <div class="layui-inline">
         <label class="layui-form-label" style="color:#f00;">租价</label>
@@ -351,6 +352,18 @@
         <input type="text" name="hu" placeholder="户" autocomplete="off" class="layui-input">
       </div>
     </div>
+    <div class="layui-inline">
+      <label class="layui-form-label">来源</label>
+      <div class="layui-input-block">
+        <select name="laiyuan" lay-filter="aihao">
+          <option></option>
+          <foreach name="laiyuan" item="pz">
+            <option value="{$pz.lxid}">{$pz.lxming}</option>
+          </foreach>
+        </select>
+        </select>
+      </div>
+    </div>
   </div>
 
   <div class="layui-form-item" pane="">
@@ -440,19 +453,8 @@
         </select>
       </div>
     </div>-->
-    <div class="layui-inline">
-      <label class="layui-form-label">来源</label>
-      <div class="layui-input-block">
-        <select name="laiyuan" lay-filter="aihao">
-          <option></option>
-          <foreach name="laiyuan" item="pz">
-            <option value="{$pz.lxid}">{$pz.lxming}</option>
-          </foreach>
-          </select>
-        </select>
-      </div>
-    </div>
-    <div class="layui-inline">
+
+    <!--<div class="layui-inline">
       <label class="layui-form-label">付款方式</label>
       <div class="layui-input-block">
         <select name="fukuanfs" lay-filter="aihao">
@@ -463,7 +465,7 @@
           </select>
         </select>
       </div>
-    </div>
+    </div>-->
   </div>
 
 <div class="layui-form-item layui-form-text">
@@ -541,7 +543,7 @@ layui.use(['form', 'layedit', 'laydate'], function(){
     }
   });
 
-  $("#fanghao,#zuodong,#danyuan").blur(function(){
+  /*$("#fanghao,#zuodong,#danyuan").blur(function(){
     var leixing={$_GET['jylx']};
     var xiaoqu=$("#xiaoqu").val();
     var zuodong=$("#zuodong").val();
@@ -566,7 +568,7 @@ layui.use(['form', 'layedit', 'laydate'], function(){
         });
     }
   });
-
+*/
 
   form.on('select(province_id)', function(data){
 
