--- a/Application/Home/View/Ziyuan/addxiaoqu.html
+++ b/Application/Home/View/Ziyuan/addxiaoqu.html
@@ -111,7 +111,7 @@
 				<div class="formControls col-xs-8 col-sm-4">
 					<input type="text" class="input-text" value="" placeholder="" id="csjunjia" name="csjunjia">
 				</div>
-			</div>-->
+			</div>
 			<br/>
 			<div class="row cl">
 				<label class="form-label col-xs-4 col-sm-2">
